--- a/app/index.html
+++ b/app/index.html
@@ -397,8 +397,11 @@
             <div class="city"><i>New York, NY 10035 - info@domain.com</i></div>
         </div>
         <div class="container__item social-icon">
-            <img src="images/twitter.png" alt=""><img src="images/facebook.png" alt=""><img src="images/pinterest.png"
-                                                                                            alt="">
+            <a href=""> <img src="images/twitter.png" alt=""></a>
+            <a href=""><img src="images/facebook.png" alt=""></a>
+            <a href=""><img src="images/pinterest.png" alt=""></a>
+
+
         </div>
         <div class="container__item author">
             <p>Handcrafted by </p>
