--- a/app/index.html
+++ b/app/index.html
@@ -80,9 +80,10 @@
                         essentially unchanged.
                     </p>
                 </div>
-                <div class="image-container"
-                     style="width:100%; height: 200px; content:'';background: url('images/Layer11.png')">
-                </div>
+                <!--  <div class="image-container__inner"
+                       style="width:100%; height: 200px; content:'';background: url('images/Layer11.png')">
+                  </div>-->
+                <img src="images/Layer11.png" alt="">
             </div>
         </div>
         <div class="row">
