--- a/app/index.html
+++ b/app/index.html
@@ -150,9 +150,10 @@
                         essentially unchanged.
                     </p>
                 </div>
-                <div class="image-container"
+                <!--<div class="image-container"
                      style="width:100%; height: 200px; content:'';background: url('images/Layer16.png')">
-                </div>
+                </div>-->
+                <img src="images/Layer16.png" alt="">
             </div>
             <div class="image-container" style="content:'';background: url('images/Layer14.png')">
             </div>
