--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,11 @@
 <body>
 
 <header>
-    <nav class="">
-        <ul class="menu">
+    <div class="icon">
+        <a href="#" class="burger-nav"></a>
+    </div>
+    <nav class="menu menu__mobile">
+        <ul class="">
             <li class="menu__item"><a href="">About us</a></li>
             <li class="menu__item"><a href="">Work</a></li>
             <li class="">
