--- a/app/index.html
+++ b/app/index.html
@@ -157,7 +157,7 @@
         </div>
     </section>
     <section class="gallery">
-        <div class="col-4">
+        <div class="col">
             <div class="flex-row">
                 <div class="gallery__item"
                      style="background: url('images/Layer19.png'); background-repeat: no-repeat; background-size: cover;">
@@ -188,7 +188,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col">
             <div class="flex-row">
                 <div class="gallery__item"
                      style="background: url('images/Layer22.png'); background-repeat: no-repeat; height: 534px; background-size: cover;">
@@ -210,7 +210,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col">
             <div class="gallery__item"
                  style="background: url('images/Layer20.png'); background-repeat: no-repeat; background-size: cover;">
                 <a href="#">
@@ -244,13 +244,13 @@
         </div>
 
     </section>
-    <section class="discover flex-column">
+    <section class="discover">
         <button class="discover__button">Discover the shop</button>
     </section>
     <section class="contact-with-us">
         <img src="images/logo2.png" alt="">
         Stay on the saddle!
-        <div class="contact-with-us__input">
+        <div class="contact-with-us__input-section">
             <input type="email" placeholder="enter your email...">
             <button type="submit">GO</button>
         </div>
@@ -258,19 +258,17 @@
 </main>
 <footer class="footer">
 
-    <div class="container__item">
+    <div class="footer__item">
         <div class="company">AOD New York</div>
         <div class="street">2250 Lexington Avenue</div>
         <div class="city"><i>New York, NY 10035 - <a href="#">info@domain.com</a></i></div>
     </div>
-    <div class="container__item social-icon">
-        <a href="#"> <img src="images/twitter.png" alt=""></a>
-        <a href="#"><img src="images/facebook.png" alt=""></a>
-        <a href="#"><img src="images/pinterest.png" alt=""></a>
-
-
+    <div class="footer__item social-icon">
+        <div><a href="#"> <img src="images/twitter.png" alt=""></a></div>
+        <div><a href="#"><img src="images/facebook.png" alt=""></a></div>
+        <div><a href="#"><img src="images/pinterest.png" alt=""></a></div>
     </div>
-    <div class="container__item author">
+    <div class="footer__item author">
         <p>Handcrafted by </p>
         <img src="images/Y%20E%20B%20O%20Logo.png" alt="">
     </div>
