--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
             <div class="info__icon">
                 <img src="images/twitterSlider.png" alt="">
             </div>
-            <h3 class="info__title">11AOD New York @aod <p>/ 35 min</p></h3>
+            <h3 class="info__title">AOD New York @aod <p>/ 35 min</p></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
                 rhoncus. Nullam a
@@ -128,7 +128,7 @@
             <div class="info__icon">
                 <img src="images/twitterSlider.png" alt="">
             </div>
-            <h3 class="info__title">22AOD New York @aod <p>/ 35 min</p></h3>
+            <h3 class="info__title">AOD New York @aod <p>/ 35 min</p></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
                 rhoncus. Nullam a
@@ -139,7 +139,7 @@
             <div class="info__icon">
                 <img src="images/twitterSlider.png" alt="">
             </div>
-            <h3 class="info__title">33AOD New York @aod <p>/ 35 min</p></h3>
+            <h3 class="info__title">AOD New York @aod <p>/ 35 min</p></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
                 rhoncus. Nullam a
