--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
         <div class="menu__mobile" id="main-screen__menu">
             <div class="menu__item"><a href="#">About us</a></div>
             <div class="menu__item"><a href="#">Work</a></div>
-            <div class=""><a href="#">
+            <div class="menu__item"><a href="#">
                 <img src="images/logo2.png" alt="">
             </a>
 
@@ -44,30 +44,24 @@
 
     </section>
     <section class="generation-info">
-        <div class="row">
+        <div class="generation-info__items">
             <div class="image-container" style="background: url('images/bicycle-company.png')">
                 <img src="images/Logo3.png" alt="">
             </div>
-            <div class="flex-column">
+            <div class="item-content">
                 <div class="info">
                     <div class="info__icon">
                         <img src="images/Icon2.png" alt="">
                     </div>
                     <h3 class="info__title">Vintage oliva</h3>
-                    <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                        It has survived not only five centuries, but also the leap into electronic typesetting,
-                        remaining
-                        essentially unchanged.
+                    <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                     </p>
                 </div>
-
                 <img src="images/Layer11.png" alt="">
             </div>
         </div>
-        <div class="row">
-            <div class="flex-column">
+        <div class="generation-info__items">
+            <div class="item-content">
                 <div class="info">
                     <div class="info__icon">
                         <img src="images/Icon5.png" alt="">
@@ -87,11 +81,11 @@
                 <img src="images/Logo4.png" alt="">
             </div>
         </div>
-        <div class="row">
+        <div class="generation-info__items">
             <div class="image-container" style="background: url('images/Layer15.png')">
                 <img src="images/Logo6.png" alt="">
             </div>
-            <div class="flex-column">
+            <div class="item-content">
                 <div class="info">
                     <div class="info__icon">
                         <img src="images/Icon7.png" alt="">
@@ -112,7 +106,7 @@
             </div>
         </div>
     </section>
-    <section class="contact flex-column single-item">
+    <section class="contact">
         <div class="info">
             <div class="info__icon">
                 <img src="images/twitterSlider.png" alt="">
@@ -148,7 +142,7 @@
         </div>
     </section>
     <section class="gallery">
-        <div class="col">
+        <div class="gallery__items">
             <div class="flex-row">
                 <div class="gallery__item"
                      style="background: url('images/Layer19.png'); background-repeat: no-repeat; background-size: cover;">
@@ -179,7 +173,7 @@
                 </a>
             </div>
         </div>
-        <div class="col">
+        <div class="gallery__items">
             <div class="flex-row">
                 <div class="gallery__item"
                      style="background: url('images/Layer22.png'); background-repeat: no-repeat; height: 534px; background-size: cover;">
@@ -201,7 +195,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="gallery__items">
             <div class="gallery__item"
                  style="background: url('images/Layer20.png'); background-repeat: no-repeat; background-size: cover;">
                 <a href="#">
@@ -240,7 +234,7 @@
     </section>
     <section class="contact-with-us">
         <img src="images/logo2.png" alt="">
-        Stay on the saddle!
+      <div class="contact-with-us__title">Stay on the saddle!</div>
         <div class="contact-with-us__input-section">
             <input type="email" placeholder="enter your email...">
             <button type="submit">GO</button>
