--- a/app/index.html
+++ b/app/index.html
@@ -143,8 +143,8 @@
     </section>
     <section class="gallery">
         <div class="gallery__items">
-            <div class="flex-row">
-                <div class="gallery__item"
+            <div class="item">
+                <div class="item--hover"
                      style="background: url('images/Layer19.png'); background-repeat: no-repeat; background-size: cover;">
                     <a href="#">
                         <img src="images/shopnow.png" alt="">
@@ -153,7 +153,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="gallery__item"
+                <div class="item--hover"
                      style="background: url('images/Layer21.png'); background-repeat: no-repeat; background-size: cover;">
                     <a href="#">
                         <img src="images/shopnow.png" alt="">
@@ -163,7 +163,7 @@
                     </a>
                 </div>
             </div>
-            <div class="gallery__item"
+            <div class="item--hover"
                  style="background: url('images/Layer20.png'); background-repeat: no-repeat; background-size: cover;">
                 <a href="#">
                     <img src="images/shopnow.png" alt="">
@@ -174,8 +174,8 @@
             </div>
         </div>
         <div class="gallery__items">
-            <div class="flex-row">
-                <div class="gallery__item"
+            <div class="item">
+                <div class="item--hover"
                      style="background: url('images/Layer22.png'); background-repeat: no-repeat; height: 534px; background-size: cover;">
                     <a href="#">
                         <img src="images/shopnow.png" alt="">
@@ -184,7 +184,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="gallery__item"
+                <div class="item--hover"
                      style="background: url('images/Layer25.png'); background-repeat: no-repeat; background-size: cover; height: 534px;">
                     <a href="#">
                         <img src="images/shopnow.png" alt="">
@@ -196,7 +196,7 @@
             </div>
         </div>
         <div class="gallery__items">
-            <div class="gallery__item"
+            <div class="item--hover"
                  style="background: url('images/Layer20.png'); background-repeat: no-repeat; background-size: cover;">
                 <a href="#">
                     <img src="images/shopnow.png" alt="">
@@ -205,8 +205,8 @@
                     </div>
                 </a>
             </div>
-            <div class="flex-row">
-                <div class="gallery__item"
+            <div class="item">
+                <div class="item--hover"
                      style="background: url('images/Layer19.png'); background-repeat: no-repeat; background-size: cover;">
                     <a href="#">
                         <img src="images/shopnow.png" alt="">
@@ -215,7 +215,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="gallery__item"
+                <div class="item--hover"
                      style="background: url('images/Layer21.png'); background-repeat: no-repeat; background-size: cover;">
                     <a href="#">
                         <img src="images/shopnow.png" alt="">
