--- a/app/index.html
+++ b/app/index.html
@@ -242,18 +242,18 @@
     </section>
 </main>
 <footer class="footer">
-    <div class="footer__item">
+    <div class="footer__item address">
         <div class="company">AOD New York</div>
         <div class="street">2250 Lexington Avenue</div>
         <div class="city"><i>New York, NY 10035 - <a href="#">info@domain.com</a></i></div>
     </div>
     <div class="footer__item social-icon">
-        <div><a href="#"> <img src="images/twitter.png" alt=""></a></div>
-        <div><a href="#"><img src="images/facebook.png" alt=""></a></div>
-        <div><a href="#"><img src="images/pinterest.png" alt=""></a></div>
+        <div class="social-icon__container"><a href="#"> <img src="images/twitter.png" alt=""></a></div>
+        <div class="social-icon__container"><a href="#"><img src="images/facebook.png" alt=""></a></div>
+        <div class="social-icon__container"><a href="#"><img src="images/pinterest.png" alt=""></a></div>
     </div>
     <div class="footer__item author">
-        <p>Handcrafted by </p>
+        <div class="author__by">Handcrafted by </div>
         <img src="images/Y%20E%20B%20O%20Logo.png" alt="">
     </div>
 </footer>
