--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,9 @@
 <main>
     <section class="new-generation">
         <div class="info">
-            <div class="info__icon">
+
                 <img src="images/Icon.png" alt="">
-            </div>
+
             <h3 class="info__title">A new generation of vintage bike</h3>
             <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -50,9 +50,9 @@
             </div>
             <div class="item-content">
                 <div class="info">
-                    <div class="info__icon">
+
                         <img src="images/Icon2.png" alt="">
-                    </div>
+
                     <h3 class="info__title">Vintage oliva</h3>
                     <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.
                     </p>
@@ -63,9 +63,9 @@
         <div class="generation-info__items">
             <div class="item-content">
                 <div class="info">
-                    <div class="info__icon">
+
                         <img src="images/Icon5.png" alt="">
-                    </div>
+
                     <h3 class="info__title">La boriosa</h3>
                     <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -87,9 +87,9 @@
             </div>
             <div class="item-content">
                 <div class="info">
-                    <div class="info__icon">
+
                         <img src="images/Icon7.png" alt="">
-                    </div>
+
                     <h3 class="info__title">retrò Bike - M. Hulot</h3>
                     <p class="info__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -108,10 +108,10 @@
     </section>
     <section class="contact">
         <div class="info">
-            <div class="info__icon">
+
                 <img src="images/twitterSlider.png" alt="">
-            </div>
-            <h3 class="info__title">AOD New York @aod <p>/ 35 min</p></h3>
+
+            <h3 class="info__title">AOD New York @aod <span class="time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
                 rhoncus. Nullam a
@@ -119,10 +119,10 @@
             </p>
         </div>
         <div class="info">
-            <div class="info__icon">
+
                 <img src="images/twitterSlider.png" alt="">
-            </div>
-            <h3 class="info__title">AOD New York @aod <p>/ 35 min</p></h3>
+
+            <h3 class="info__title">AOD New York @aod <<span class="time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
                 rhoncus. Nullam a
@@ -130,10 +130,10 @@
             </p>
         </div>
         <div class="info">
-            <div class="info__icon">
+
                 <img src="images/twitterSlider.png" alt="">
-            </div>
-            <h3 class="info__title">AOD New York @aod <p>/ 35 min</p></h3>
+
+            <h3 class="info__title">AOD New York @aod <span class="info__title__time">/ 35 min</span></h3>
             <p class="info__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut tellus ac
                 nulla semper
                 rhoncus. Nullam a
@@ -245,16 +245,16 @@
     <div class="footer__item address">
         <div class="company">AOD New York</div>
         <div class="street">2250 Lexington Avenue</div>
-        <div class="city"><i>New York, NY 10035 - <a href="#">info@domain.com</a></i></div>
+        <div class="city"><i>New York, NY 10035 - <a href="mailto:#">info@domain.com</a></i></div>
     </div>
-    <div class="footer__item social-icon">
-        <div class="social-icon__container"><a href="#"> <img src="images/twitter.png" alt=""></a></div>
-        <div class="social-icon__container"><a href="#"><img src="images/facebook.png" alt=""></a></div>
-        <div class="social-icon__container"><a href="#"><img src="images/pinterest.png" alt=""></a></div>
+    <div class="footer__item social-icons">
+        <div class="social-icons__container"><a href="#"> <img src="images/twitter.png" alt=""></a></div>
+        <div class="social-icons__container"><a href="#"><img src="images/facebook.png" alt=""></a></div>
+        <div class="social-icons__container"><a href="#"><img src="images/pinterest.png" alt=""></a></div>
     </div>
     <div class="footer__item author">
         <div class="author__by">Handcrafted by </div>
-        <img src="images/Y%20E%20B%20O%20Logo.png" alt="">
+        <a href="#"> <img src="images/Y%20E%20B%20O%20Logo.png" alt=""></a>
     </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
