--- a/app/index.html
+++ b/app/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+<div class="hamburg-menu">
+    <div href="#" class="burger-nav"></div>
+</div>
+<nav class="menu" id="menu">
+    <div class="menu__container" id="main-screen__menu">
+        <div class="menu__item"><a href="#">About us</a></div>
+        <div class="menu__item"><a href="#">Work</a></div>
+        <div class="menu__item"><a href="#">
+            <img src="images/logo2.png" alt="">
+        </a>
 
-<div class="main-screen">
-    <div class="main-screen__hamg-menu">
-        <a href="#" class="burger-nav"></a>
-    </div>
-    <nav class="menu" id="menu">
-        <div class="menu__mobile" id="main-screen__menu">
-            <div class="menu__item"><a href="#">About us</a></div>
-            <div class="menu__item"><a href="#">Work</a></div>
-            <div class="menu__item"><a href="#">
-                <img src="images/logo2.png" alt="">
-            </a>
-
-            </div>
-            <div class="menu__item"><a href="#">Shop</a></div>
-            <div class="menu__item"><a href="#">Contact</a></div>
         </div>
-    </nav>
+        <div class="menu__item"><a href="#">Shop</a></div>
+        <div class="menu__item"><a href="#">Contact</a></div>
+    </div>
+</nav>
+<div class="main-screen">
+
 </div>
 <main>
     <section class="new-generation">
